<resources>
    <string name="app_name">Meat Shop</string>
    <string name="close_drawer">Close</string>
    <string name="open_drawer">Open</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_our_shops">Our shops</string>
    <string name="menu_tweets">Tweets about us</string>

    <string name="intro_title">INTRODUCTION</string>
    <string name="intro_description">En Carnicerías ACME ponemos a su disposición las mejores carnes, embutidos y platos preparados entre otras delicias gourmet. Si tienen un evento y quieren deleitar a sus invitados con unos productos sanos, frescos y sabrosos, contacten con nosotros</string>
    <string name="intro_traditional_cut_description">No tenemos bandejas preparadas. Nuestro corte es artesano y profesional</string>
    <string name="intro_traditional_cut_title">Traditional cut</string>
    <string name="intro_delivery_description">Realicen su pedido hoy mismo y mañana lo tendrán listo en su domicilo.</string>
    <string name="intro_delivery_title">Home delivery</string>
    <string name="item_1_title">Calidad</string>
    <string name="item_1_description">Carne de calidad de los valles pirenáicos. Con las mejores garantías de sanidad.</string>
    <string name="intro_2_title">Servicio 24h</string>
    <string name="intro_3_title">Restauración</string>
    <string name="intro_4_title">Charcutería</string>
    <string name="intro_2_description">En nuestro transporte refrigerado garantizamos que cumpliremos en 24h con nuestros compromisos.</string>
    <string name="intro_3_description">Servimos a los mejores restaurantes de Zaragoza. Si regentas un local de restauración llámanos.</string>
    <string name="intro_4_description">Los mejores ejemplares de jamón ibérico y embutidos tradicionales. Especialistas en charcutería.</string>

    <string name="title_activity_shop_maps">Our Shops</string>
    <string name="sells_meat">Sells meat</string>
    <string name="family_friendly">Family Friendly</string>
    <string name="take_away_service">Take away</string>
    <string name="is_24h">Open 24h</string>
    <string name="maps_filter">Filter by</string>

    <string name="tweets_about_us">Tweets about us</string>

    <string-array name="language_array">
        <item>-- select --</item>
        <item>English</item>
        <item>Español</item>
    </string-array>

    <string name="language_select">Choose a language</string>
</resources>
