<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home_black_48dp"/>

        <item
            android:id="@+id/our_shops"
            android:title="@string/menu_our_shops"
            android:icon="@drawable/ic_place_black_48dp"/>

        <item
            android:id="@+id/tweets"
            android:title="@string/menu_tweets"
            android:icon="@drawable/ic_message_black_48dp"/>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings_black_48dp"/>
    </group>
</menu>