<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.meatshop.view.ShopMapsActivity"/>

    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/filter_title"
            android:text="@string/maps_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />

        <CheckBox
            android:id="@+id/sells_meat_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sells_meat"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/filter_title"
            />

        <CheckBox
            android:id="@+id/family_friendly_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_friendly"
            android:layout_toEndOf="@+id/sells_meat_cb"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <CheckBox
            android:id="@+id/take_away_service_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_away_service"
            android:layout_below="@+id/family_friendly_cb"
            android:layout_toEndOf="@+id/filter_title"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <CheckBox
            android:id="@+id/is_24h_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_24h"
            android:layout_below="@+id/family_friendly_cb"
            android:layout_toEndOf="@+id/take_away_service_cb"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />
    </RelativeLayout>

</RelativeLayout>